# noise-suppressor

./: .gitignore  CMakeLists.txt  README.md
include/: MainComponent.h  NoiseCanceller.h
include/mac/: MacPermissions.h
src/: CMakeLists.txt  MacPermissions_mac.mm  Main.cpp  MainComponent.cpp  NoiseCanceller.cpp
